# qbraid-algorithms

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  OneHotEncode.py  README.md  env.yml  loadmnistdata.py  messy_qosf_python_conversion.ipynb  mypy.ini  pcalocaldetuning.py  pcareduction.py  pyproject.toml  qosf_python_conversion.ipynb  qosf_python_conversion_with_emulation.ipynb  requirements-test.txt  requirements.txt  ruff.toml  tox.ini
.github/ISSUE_TEMPLATE/: algorithm-implementation.md  bug_report.yml
.github/workflows/: append-pr-number.yml  bump-version.yml  docs.yml  format.yml  gh-pages.yml  main.yml  pre-release.yml  publish.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css  s4defs-roles.css
docs/api/: qbraid_algorithms.rst
examples/: Demo_QFT.ipynb  QFT.ipynb  bells_inequality.ipynb  bernstein_vazirani.ipynb  demo_hamiltonians.ipynb  demo_qasmbuilder.ipynb  echo_state_network_mnist.ipynb  echo_state_network_time_series.ipynb  evolutions.ipynb  hhl.ipynb  qaoa.ipynb  qft.ipynb  qtran.ipynb  quantum_reservoir_computing_mnist.ipynb
examples/QPE/: iqft.qasm  qpe.ipynb  unitary.qasm
examples/openpulse/: gaussian_pulse.ipynb
examples/sandbox/: README.md
qbraid_algorithms/: __init__.py  _version.py  todo.txt  utils.py
qbraid_algorithms/Block_encoding/: PrepSelLibrary.py  ToeplitzLibrary.py  __init__.py
qbraid_algorithms/HHL/: HHLLibrary.py  __init__.py  hhl.py
qbraid_algorithms/Phase_Estimation/: PhaseEstLibrary.py
qbraid_algorithms/QFT/: QFT.qasm
qbraid_algorithms/QFT_2/: QFT.py  QFTLibrary.py  __init__,py  __init__.py
qbraid_algorithms/QTran/: GateLibrary.py  ModuleLoader.py  QasmBuilder.py  __init__.py  gate_library.py  module_loader.py  qasm_builder.py  todo.txt
qbraid_algorithms/QasmBuilder/: AmplAmpLibrary.py  GateLibrary.py  HHLLibrary.py  PhaseEstLibrary.py  QFTLibrary.py  QasmBuilder.py  __init__.py  test_qasmbuilder.ipynb
qbraid_algorithms/Rodeo/: RodeoLibrary.py  __init__.py  rodeo.py
qbraid_algorithms/amplitude_amplification/: AmplAmpLibrary.py  __init__.py  amp_ampl.py  amplitude_amplification.py
qbraid_algorithms/bells_inequality/: __init__.py  bells_inequality.py  bells_inequality.qasm
qbraid_algorithms/bernstein_vazirani/: __init__.py  bernstein_vazirani.py  bernstein_vazirani.qasm  bernstein_vazirani_autoqasm.py  bernvaz.py  bernvaz.qasm
qbraid_algorithms/cli/: __init__.py  generate.py  main.py
qbraid_algorithms/datasets/: __init__.py  mnist.py  sequences.py
qbraid_algorithms/embedding/: __init__.py  prep_sel.py  toeplitz.py
qbraid_algorithms/esn/: __init__.py  exceptions.py  model.py  reservoir.py
qbraid_algorithms/evolution/: GQSP.py  H_TestSuite.py  Trotter.py  __init__.py  gqsp.py  h_test_suite.py  trotter.py
qbraid_algorithms/hhl/: __init__.py  hhl.py
qbraid_algorithms/inverse_qft/: __init__.py  inverse_qft.py  iqft.qasm
qbraid_algorithms/iqft/: __init__.py  iqft.py  iqft.qasm  iqft_subroutine.qasm
qbraid_algorithms/matrix_embedding/: PrepSelLibrary.py  ToeplitzLibrary.py  __init__.py
qbraid_algorithms/openpulse/: __init__.py  gaussian.py
qbraid_algorithms/qaoa/: __init__.py  cost.py  qaoa.py  test.ipynb
qbraid_algorithms/qasm_resources/: bernvaz_subroutine.qasm  oracle.qasm  qft.qasm  qpe.qasm  qpe_subroutine.qasm
qbraid_algorithms/qft/: QFTLibrary.py  __init__.py  qft.py  qft.qasm  qft_aq.py  qft_lib.py  qft_subroutine.qasm
qbraid_algorithms/qpe/: PhaseEstLibrary.py  __init__.py  phase_est.py  qpe.py  qpe.qasm  qpe_subroutine.qasm
qbraid_algorithms/qrc/: __init__.py  adapter.py  bloqade_python_scipy.py  dynamics.py  encoding.py  io_handler.py  krylov.py  krylov_foo.py  krylov_foo_1.py  krylov_foo_2.py  linear.py  load_dataset.py  magnus_expansion.py  model.py  parameters.py  pca.py  qrc_model.py  reservoir.py  test_rbh.py  time_evolution.py
qbraid_algorithms/qrc/dynamics/: base.py
qbraid_algorithms/qrc/encoding/: base.py  encoding.py
qbraid_algorithms/qrc/model/: base.py  qrc_model.py
qbraid_algorithms/qtran/: __init__.py  gate_library.py  module_loader.py  qasm_builder.py
qbraid_algorithms/reservoir_computing/: __init__.py  classical_esn.py
qbraid_algorithms/reservoir_computing/datasets/: __init__.py  sequences.py
qbraid_algorithms/rodeo/: __init__.py  rodeo.py
tests/: conftest.py  local_device.py  test_QFT.py  test_bells_inequality.py  test_bernstein_vazirani.py  test_bernvaz.py  test_builder_algorithms.py  test_builder_statics.py  test_cli.py  test_esn_model.py  test_esn_reservoir.py  test_gaussian.py  test_hamiltonian.py  test_iqft.py  test_qaoa.py  test_qasmbuilder.py  test_qft.py  test_qpe.py  test_qrc_dynamics.py  test_qrc_model.py  test_time_evolution.py  test_version.py
tests/fixtures/: reservoir_computing.py
tests/fixtures/qft/: qft_5_qubit.qasm
tests/resources/iqft/: iqft_0.qasm  iqft_00.qasm  iqft_000.qasm  iqft_001.qasm  iqft_010.qasm  iqft_2qubit_superposn.qasm
tests/resources/qft/: qft_0.qasm  qft_00.qasm  qft_000.qasm  qft_001.qasm  qft_01.qasm  qft_010.qasm  qft_1.qasm  qft_2qubit_superposn.qasm  undo_iqft_00.qasm  undo_iqft_00_superposition.qasm
tests/resources/qpe/: qpe_3.qasm  qpe_4.qasm  qpe_5.qasm  r_3pi4.qasm  t.qasm  z.qasm
tests/test_qbraid_algorithms/: __init__.py
tests/test_qbraid_algorithms/test_qrc/: test_krylov.py  test_magnus_expansion.py
tools/: stamp_pre_release.py
