[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qbraid-algorithms"
version = "0.0.0"
authors = [{name = "qBraid Development Team"}, {email = "contact@qbraid.com"}]
description = "Python package for building, simulating, and benchmarking hybrid quantum-classical algorithms."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["qbraid", "quantum", "algorithms", "qml"]
license = {text = "GNU General Public License v3.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = ["torch>=2.3,<3.0", "numpy>=1.17,<2.2", "scipy>=1.13.1,<1.15.0", "bloqade>=0.15.12,<0.16", "scikit-learn>=1.5.0,<1.6.0"]

[project.urls]
Homepage = "https://github.com/qBraid/qbraid-algorithms"
Documentation = "https://docs.qbraid.com"
"Bug Tracker" = "https://github.com/qBraid/qbraid-algorithms/issues"
Discord = "https://discord.gg/TPBU2sa8Et"
"Launch on Lab" = "https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qbraid-algorithms.git"

[project.optional-dependencies]
visualization = ["matplotlib"]
test = ["pytest", "pytest-cov"]
lint = ["isort", "ruff", "qbraid-cli"]
docs = ["sphinx>=7.4,<8.2", "sphinx-autodoc-typehints>=1.24,<2.6", "sphinx-rtd-theme>=2.0.0,<3.0.2", "docutils<0.22", "sphinx-copybutton"]

[tool.setuptools_scm]
write_to = "qbraid_algorithms/_version.py"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.__pycache__
  | \.tox
  | \.venv
  | dist
)/
'''

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = "W0108,W0511,W0401,R0902,R0903,R0913"

[tool.pylint.MASTER]
ignore-paths = [
  "^.*\\_version.py$",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
