[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbraid-algorithms"
dynamic = ["version", "dependencies"]
authors = [{name = "qBraid Development Team"}, {email = "contact@qbraid.com"}]
description = "Python package for building, simulating, and benchmarking hybrid quantum-classical algorithms."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["qbraid", "quantum", "algorithms", "openqasm"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0,<0.15.0",
    "typing-extensions>=4.0.0"
]

[project.scripts]
qbraid-algorithms = "qbraid_algorithms.cli.main:app"

[tool.setuptools.dynamic]
version = {attr = "qbraid_algorithms._version.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/qBraid/qbraid-algorithms"
Documentation = "https://docs.qbraid.com"
"Bug Tracker" = "https://github.com/qBraid/qbraid-algorithms/issues"
Discord = "https://discord.gg/TPBU2sa8Et"
"Launch on Lab" = "https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qbraid-algorithms.git"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = "W0108,W0511,W0401,R0902,R0903,R0913,E0401"

[tool.pylint.MASTER]
ignore-paths = [
  "^.*\\_version.py$",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "pass",
  "raise NotImplementedError",
  "return NotImplemented",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "logger.debug",
  "# pragma: no cover"
]

[tool.coverage.run]
parallel = true
source = ["qbraid_algorithms"]
omit = [
  "**/qbraid_algorithms/__init__.py"
]